# ConsensusDocking

./: README.md  dependences.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
clustering/: __init__.py  cluster_encoding_file.py  clustering.py  clusteringDBSCAN.py  clusteringKMeans.py  clusteringOPTICS.py
consensus_docking/: consensus.conf  main.py  test.py
consensus_docking/analysis/: __init__.py  analysis_utils.py  clustering_analysis.ipynb  filtering_analysis.ipynb  near_natives.py  rmsd.py
consensus_docking/clustering/: __init__.py  cluster_encoding_file.py  clustering.py  clusteringDBSCAN.py  clusteringDBSCAN_Kmeans.py  parserEncoding.py  provisional_clustering.py
encoding/: encoding.py  encoding_paral.py
parser/: ParserFroDock.py  ParserLightDock.py  ParserPatchDock.py  ParserPiper.py  ParserRosetta.py  ParserZDock.py  parser.py  parserFTDock.py  parserFroDock.py  parserLightDock.py  parserPatchDock.py  parserPiper.py  parserRosetta.py  parserZDock.py
preprocessing/: aligment.py  align.py  align_structures.py  parse_scorings.py  parserLightDock.py  parserPiper.py  parserRosetta.py
sc_parser/: __init__.py  parserPatchDock.py
tests/: __init__.py  test_preprocessing.py  test_preprocessing_aligner.py  test_preprocessing_parser.py  test_preprocessing_parser_frodock.py  test_preprocessing_parser_ftdock.py  test_preprocessing_parser_lightdock.py  test_preprocessing_parser_patchdock.py  test_preprocessing_parser_piper.py  test_preprocessing_parser_rosetta.py  test_preprocessing_parser_zdock.py  utils.py
(+50 files in other folders)
