[metadata]
# replace with your username:
name = ConsensusDocking
version = 0.0.1
author = Laura Malo
author_email = laumaro95@gmail.com
description = Consensus Docking
url = https://github.com/laumalo/ConsensusDocking
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
